force-app/main/default/objects/Invoice__c/fields/Bill_to__c.field-meta.xml
<CustomField>
    <fullName>Bill_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Bill-to)</relationshipLabel>
    <relationshipName>BillToInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>