force-app/main/default/objects/Invoice__c/fields/Business_Central_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Central_Id__c</fullName>
    <externalId>true</externalId>
    <label>Business Central Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>