force-app/main/default/objects/Invoice__c/fields/Customer_Purchase_Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order_Reference__c</fullName>
    <label>Customer Purchase Order Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>