force-app/main/default/objects/Invoice__c/fields/Is_This_Year_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_This_Year_Invoice__c</fullName>
    <formula>YEAR(Due_Date__c)=YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is This Year Invoice</label>
    <type>Checkbox</type>
</CustomField>