force-app/main/default/objects/Invoice__c/fields/Last_Business_Central_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Business_Central_Sync__c</fullName>
    <label>Last Business Central Sync</label>
    <type>DateTime</type>
</CustomField>