force-app/main/default/objects/Invoice__c/fields/Total_Amount_Excl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Excl_Tax__c</fullName>
    <label>Total Amount Excl Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>