force-app/main/default/objects/Invoice__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>TEXT(YEAR(Invoice_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>