force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bill_to__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Order__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Total_Amount_Excl_Tax__c</columns>
    <columns>Total_Amount_Incl_Tax__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>